--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,15 @@
 {% block content %}
 
 <h2>Welcome to GameHouse, </h2>
-{% for message in get_flashed_messages() %}
-    <p style="padding-left:30px; padding-top:30px" class="text-primary">{{message}}</p>
-{% endfor %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 
 
 
