--- a/templates/login.html
+++ b/templates/login.html
@@ -5,40 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Login Page</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a style="margin: 0 10px; padding-right:50px;" class="navbar-brand" href="/">GameHouse</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a style="margin: 0 10px; padding-right:50px;" class="navbar-brand" href="/">GameHouse</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-  </nav>
-  <div style="padding:30px">
-      <h2>Login</h2>
-      <form style="padding-bottom: 10px" method="POST" action="/login">
-          <div class="form-group col-md-3">
-              <label for="exampleInputUsername1">Username</label>
-              <input type="text" class="form-control" id="InputUsername1" name="username" placeholder="Username" value="{{ request.form.username }}">
-          </div>
-          <div class="form-group col-md-3">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="InputPassword1" name="password" placeholder="Password" value="{{ request.form.password }}">
-          </div>
-          <div class="display:inline-block">
-              <input style="margin-left:15px" type="submit" class="btn btn-primary" value="Login">
-              <a class="btn btn-outline-primary" href="/signup">Sign up</a>
-          </div>
-      </form>
-  </div>
-    {% if message %}
-        <div style="width:25%;margin:35px" class="alert alert-warning" role="alert">{{ message }}</div>
-    {% endif %}
+    </button>
+</nav>
+<div style="padding:30px">
+    <h2>Login</h2>
+    <form style="padding-bottom: 10px" method="POST" action="/login">
+        <div class="form-group col-md-3">
+            <label for="exampleInputUsername1">Username</label>
+            <input type="text" class="form-control" id="InputUsername1" name="username" placeholder="Username"
+                   value="{{ request.form.username }}">
+        </div>
+        <div class="form-group col-md-3">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="InputPassword1" name="password" placeholder="Password"
+                   value="{{ request.form.password }}">
+        </div>
+        <div class="display:inline-block">
+            <input style="margin-left:15px" type="submit" class="btn btn-primary" value="Login">
+            <a class="btn btn-outline-success" href="/signup">Sign up</a>
+        </div>
+    </form>
+</div>
+{% if message %}
+<div style="width:25%;margin:35px" class="alert alert-warning" role="alert">{{ message }}</div>
+{% endif %}
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
 </body>
 </html>
 
