--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,28 +15,20 @@
     </nav>
     <div style="padding:30px">
         <h4>Register</h4>
+        <br>
         {% from "_formhelpers.html" import render_field %}
-        <form class="form-group" method=post action="/signup">
+        <form method=post>
             <dl>
-                {{render_field(form.username)}}
-                {{render_field(form.email)}}
-                {{render_field(form.password)}}
-                {{render_field(form.confirm)}}
-                {{render_field(form.accept_tos)}}
+                {{ render_field(form.username) }}
+                {{ render_field(form.email) }}
+                {{ render_field(form.password) }}
+                {{ render_field(form.confirm) }}
+                {{ render_field(form.accept_tos) }}
             </dl>
-            <p ><input class="btn btn-primary" type="submit" value="Sign up"></p>
-      </form>
-      {% if error%}
-        <p class="error"><strong>Error: </strong>{{error}}</p>
-      {% endif %}
+            <p><input type=submit value="Sign up">
+        </form>
 
   </div>
-
-
-
-
-
-
 
 
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -44,32 +36,3 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
-
-<!--
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a style="margin: 0 10px; padding-right:50px;" class="navbar-brand" href="/">GameHouse</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  </nav>
-  <div style="padding:30px">
-    <h1>Sign up</h1>
-        <form style="padding-bottom: 10px" method="POST" action="/signup">
-            <div class="form-group col-md-3">
-                <label for="exampleInputUsername1">Username</label>
-                <input type="text" class="form-control" id="InputUsername1" name="username" placeholder="Username" value="{{ request.form.sign_username }}">
-            </div>
-            <div class="form-group col-md-3">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="InputPassword1" name="password" placeholder="Password" value="{{ request.form.sign_password }}">
-            </div>
-            <div class="display:inline-block">
-                <a class="btn btn-outline-primary" href="/signup">Sign up</a>
-            </div>
-        </form>
-  </div>
-  {% if message %}
-        <div style="width:25%"class="alert alert-warning" role="alert">{{ message }}</div>
-  {% endif %}
--->
