--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,7 +25,7 @@
                 {{ render_field(form.confirm) }}
                 {{ render_field(form.accept_tos) }}
             </dl>
-            <p><input type=submit value="Sign up">
+            <p><input class="btn btn-outline-success" type=submit value="Sign up">
         </form>
 
   </div>
