--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,5 +2,7 @@
 {% block title %}Profile{% endblock %}
 {% block content %}
 
-<h2>Profile Page</h2>
+    {% if session.logged_in %}
+        <h1>Profile of {{username}}</h1>
+    {% endif %}
 {% endblock %}
