Users can add game to the Store

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,5 +2,5 @@
 {% block title %}Blog{% endblock %}
 {% block content %}
 
-<h2>Blog Page</h2>
+<h2 style="padding-left:10px;" class="display-4">Blog Page</h2>
 {% endblock %}
