--- a/templates/library.html
+++ b/templates/library.html
@@ -3,6 +3,6 @@
 {% block content %}
 
     {% if session.logged_in %}
-        <h1>Library of {{username}}</h1>
+        <h1 style="padding-left:10px;" class="display-4">Library of {{username}}</h1>
     {% endif %}
 {% endblock %}
