--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,6 +3,6 @@
 {% block content %}
 
     {% if session.logged_in %}
-        <h1>Profile of {{username}}</h1>
+        <h1 style="padding-left:10px;" class="display-4" >Profile of {{username}}</h1>
     {% endif %}
 {% endblock %}
