--- a/templates/store.html
+++ b/templates/store.html
@@ -2,5 +2,34 @@
 {% block title %}Store{% endblock %}
 {% block content %}
 
-<h2>Store Page</h2>
+    <h2 style="padding-left:10px;" class="display-4">Store Page</h2>
+    {% if session.logged_in %}
+        <a style="margin: 80px ; position: absolute; top: -10px; right: -10px;" id="add_game" class="btn btn-outline-dark" href="/store/add">Add Game</a>
+    {% endif %}
+
+            <div class="container m-t-md">
+                <div  class="row">
+                        {% if games %}
+                            {% for game_id, game in games %}
+                                <div style="margin-top: 20px;" class="col-xs-s10 col-md-4">
+                                    <div class="card" style="width: 20rem; ">
+                                        <div class="card-body">
+                                            <h4 class="card-title">{{game.title}}</h4>
+                                            <h6 class="card-subtitle mb-2 text-muted">Producer: {{game.producer}}</h6>
+                                            <h6 class="card-subtitle mb-2 text-muted">Publish date: {{game.publish_date}}</h6>
+                                            <p class="card-text">{{game.content}}</p>
+                                            <p>Category:<a href="#" class="card-link"> {{game.category}}</a></p>
+                                            <p class="card-text">Price: {{game.price}} ₺ </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                </div>
+            </div>
+
 {% endblock %}
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
