Profile page and Library is added

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,20 @@
     {% endwith %}
   {% endblock %}
 
+  <div class="jumbotron">
+    <h1 class="display-3">Welcome to GameHouse !</h1>
+    <p class="lead">The ultimate gaming platform.</p>
+    <hr class="my-2">
+    <p>Explore many new games in the store.
+      <br> Create contents in the blog and connect with users.
+      <br> See what is trending in the activity feed.
+      <br> Don't wait, join us and start playing !</p>
+    <p style="margin-bottom:-20px;padding-top:10px;" class="lead">
+      <a class="btn btn-primary btn-lg" href="/store" role="button">Go to the Store</a>
+      <a class="btn btn-success btn-lg" href="/signup" role="button">Join Us !</a>
+    </p>
+  </div>
+
       <table style="margin-top:50px" id="act_table" class="table table-hover">
         <thead>
           <tr>
