--- a/templates/store.html
+++ b/templates/store.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block title %}Store{% endblock %}
 {% block content %}
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <h1 align="center">Game Store</h1>
     {% if session.logged_in %}
@@ -19,7 +22,11 @@
                                             <h6 class="card-subtitle mb-2 text-muted">Publish date: {{game.publish_date}}</h6>
                                             <p class="card-text">{{game.content}}</p>
                                             <p>Category: <a href="#" class="card-link"> {{game.category}}</a></p>
-                                            <button class="btn btn-outline-dark">Purchase:  {{game.price}} ₺ </button>
+                                            <p class="card-text">Price: {{game.price}} $</p>
+                                            <form method="POST" action="/library">
+                                                <input type="text" hidden="hidden" name="buy_now" value="title:{{game.title}}:price:{{game.price}}:">
+                                                <span style="float:right;"><button  class="btn btn-outline-dark" type="submit"><i class="material-icons">shopping_cart</i> Buy Now</button></span>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
