--- a/templates/profile.html
+++ b/templates/profile.html
@@ -86,7 +86,7 @@
                     </tbody>
                   </table>
                   <a href="/profile/edit_profile" class="btn btn-primary">Edit Profile</a>
-                  <a href="/profile/delete_profile" class="btn btn-primary">Delete Account</a>
+                  <a href="/profile/delete_profile" class="btn btn-danger">Delete Account</a>
                 </div>
               </div>
             </div>
