--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a style="margin: 0 10px; padding-right:50px;" class="navbar-brand" href="/">GameHouse</a>
+      <a style="margin: 0 10px; padding-right:50px;" class="navbar-brand" href="/"><font size="5">GameHouse</font></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,10 +32,6 @@
             </li>
           {% endif %}
         </ul>
-        <form style="margin: 0 35px" class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="type something" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
 
         {% if session.logged_in %}
           <form style="margin: 0 10px" action="/logout">
