--- a/templates/blog.html
+++ b/templates/blog.html
@@ -68,7 +68,7 @@
                                 <form method="POST" action="/blog">
                                     <input type="text" hidden="hidden" name="tag" value="clap:{{post_id}}">
                                     <button class="w3-button w3-tiny w3-green w3-ripple" type="submit"><i class="material-icons">exposure_plus_1</i></button>
-                                    <span class="font-weight-bold" style="margin-left:30px;">{{post.like_count}}</span>
+                                    <area shape="circle"/><span class="font-weight-bold" style="margin-left:30px;">{{post.like_count}}</span>
                                 </form>
                             </span>
                         </div>
