--- a/templates/library.html
+++ b/templates/library.html
@@ -3,17 +3,18 @@
 {% block content %}
 
     {% if session.logged_in %}
-        <h1 align="center">Library of {{username}}</h1>
+        <h1 align="center">Library of @{{username}}</h1>
     {% endif %}
 
     {% if message %}
         <div style="width:25%;margin:35px" class="alert alert-warning" role="alert">{{ message }}</div>
     {% endif %}
 
-    <div style="margin-top:80px;padding-left:50px;padding-right:50px;" class="list-group">
+    <h3 align="left" style="padding-left:30px;">Purchase History</h3>
+    <div style="margin-top:30px;padding-left:50px;padding-right:50px;" class="list-group">
         {% if games %}
             {% for game_id, game in games %}
-              <div class="list-group-item list-group-item-action flex-column align-items-start">
+              <div style="margin-bottom:5px;" class="list-group-item list-group-item-action flex-column align-items-start">
                 <div class="d-flex w-100 justify-content-between">
                     <h5 class="mb-1">{{game.title}}</h5>
                     <small>Purchase Date: {{game.publish_date}}</small>
