--- a/templates/store.html
+++ b/templates/store.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" alt="Third slide" src="https://41zxbw463fq733z1kl101n01-wpengine.netdna-ssl.com/wp-content/uploads/2017/06/Monster-Hunter-World-1-750x430.jpg">
+                        <img class="d-block w-100" alt="Third slide" src="https://stickystatic.com/tech/wp-content/uploads/star-wars-battlefront.jpg">
                         <div class="carousel-caption d-none d-md-block">
                             <h3>Enjoy games with best prices</h3>
                         </div>
@@ -50,7 +50,7 @@
         </div>
 
     {% if session.logged_in %}
-        <a style="margin: 80px ; position: absolute; top: -10px; right: -60px;" id="add_game" class="btn btn-outline-dark" href="/store/add">Add Game</a>
+        <a style="margin: 80px ; position: absolute; top: 10px; right: -60px;" id="add_game" class="btn btn-outline-dark" href="/store/add">Add Game</a>
     {% endif %}
 
     <h3 align="left" style="padding-left:30px;padding-top:10px;">Recently added >></h3>
