--- a/templates/login.html
+++ b/templates/login.html
@@ -20,12 +20,12 @@
     <h2>Login</h2>
     <form style="padding-bottom: 10px" method="POST" action="/login">
         <div class="form-group col-md-3">
-            <label for="exampleInputUsername1">Username</label>
+            <label for="InputUsername1">Username</label>
             <input type="text" class="form-control" id="InputUsername1" name="username" placeholder="Username"
                    value="{{ request.form.username }}">
         </div>
         <div class="form-group col-md-3">
-            <label for="exampleInputPassword1">Password</label>
+            <label for="InputPassword1">Password</label>
             <input type="password" class="form-control" id="InputPassword1" name="password" placeholder="Password"
                    value="{{ request.form.password }}">
         </div>
@@ -37,7 +37,7 @@
 </div>
 
 {% if message %}
-<div style="width:25%;margin:35px" class="alert alert-warning" role="alert">{{ message }}</div>
+    <div style="width:25%;margin:35px" class="alert alert-warning" role="alert">{{ message }}</div>
 {% endif %}
 
 
